--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
         "@typescript-eslint/consistent-type-assertions": "off",
         "@typescript-eslint/prefer-optional-chain": "off",
         "@typescript-eslint/ban-ts-comment": "off",
-        "@typescript-eslint/prefer-ts-expect-error": "off"
+        "@typescript-eslint/prefer-ts-expect-error": "off",
+        "@typescript-eslint/prefer-nullish-coalescing": "off"
       }
     }
   ],
