--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,9 @@
         "@typescript-eslint/prefer-optional-chain": "off",
         "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/prefer-ts-expect-error": "off",
-        "@typescript-eslint/prefer-nullish-coalescing": "off"
+        "@typescript-eslint/prefer-nullish-coalescing": "off",
+        "@typescript-eslint/no-unsafe-assignment": "off",
+        "@typescript-eslint/no-unsafe-call": "off"
       }
     }
   ],
